--- a/m/less/style.less
+++ b/m/less/style.less
@@ -81,7 +81,7 @@ header{
             color: #fff;
             line-height: 100%;
             font-size: 32rem/@b;
-            text-shadow: -2px 0 #333, 0 1px #333, 1px 0 #333, 0 -2px #333
+            // text-shadow: -2px 0 #333, 0 1px #333, 1px 0 #333, 0 -2px #333
         }
         img{
             width: 100%;
